update rules pages

--- a/app/components/rule-sections/ability-scores-and-modifiers.mdx
+++ b/app/components/rule-sections/ability-scores-and-modifiers.mdx
@@ -18,6 +18,7 @@
 | 26-27 | +8       |
 | 28-29 | +9       |
 | 30    | +10      |
-\nTo determine an ability modifier without consulting the table, subtract 10 from the ability score and then divide the total by 2 (round down).
+
+To determine an ability modifier without consulting the table, subtract 10 from the ability score and then divide the total by 2 (round down).
 \nBecause ability modifiers affect almost every attack roll, ability check, and saving throw, ability modifiers come up in play more often than their associated scores.
 ",
